--- a/style2.css
+++ b/style2.css
@@ -31,16 +31,17 @@ textarea {
     resize: vertical; 
     height: 100px; 
 } 
- 
-button { 
-    padding: 10px 20px; 
-    background: linear-gradient(90deg, #ff7e5f, #feb47b);
-    color: #fff; 
+  button { 
+    padding: 0.5rem; 
     border: none; 
     border-radius: 4px; 
+    background: linear-gradient(90deg, #ff7e5f, #feb47b);
+    color: #fff; 
     cursor: pointer; 
-} 
- 
-button:hover { 
-    background-color: #218838; 
-} 
+    width: 100%; 
+  } 
+   
+  button:hover { 
+    background: linear-gradient(270deg, #feb47b, #ff7e5f);
+    color: #333;
+  } 
